--- a/css/collection.css
+++ b/css/collection.css
@@ -5,3 +5,4 @@
 @import url(collection.section-wine-content.partial.css);
 @import url(collection.section-nearest-tasting.partial.css);
 @import url(collection.section-tasting-menu.partial.css);
+@import url(collection.section-schedule.partial.css);
