--- a/css/about_us.css
+++ b/css/about_us.css
@@ -8,3 +8,4 @@
 @import url(about_us.section-our_winery.css);
 @import url(about_us.section-our_story.css);
 @import url(about_us.section-create_wines.partial.css);
+@import url(common.footer.partial.css);
