Added footer to 'collection.html'

--- a/css/collection.css
+++ b/css/collection.css
@@ -6,3 +6,4 @@
 @import url(collection.section-nearest-tasting.partial.css);
 @import url(collection.section-tasting-menu.partial.css);
 @import url(collection.section-schedule.partial.css);
+@import url(common.footer.partial.css);
