Addef footer to 'wineclub.html'

--- a/css/wineclub.css
+++ b/css/wineclub.css
@@ -4,3 +4,4 @@
 @import url(wineclub.get-your-membership-right-now.partial.css);
 @import url(wineclub.header.css);
 @import url(wineclub.membership-benefits.partial.css);
+@import url(common.footer.partial.css);
