Added footer to 'contact_us.html'

--- a/css/contact_us.css
+++ b/css/contact_us.css
@@ -4,3 +4,4 @@
 @import url(common.header-address.partial.css);
 @import url(common.header-menu.partial.css);
 @import url(contact_us.section-distribution.css);
+@import url(common.footer.partial.css);
