--- a/css/index.header-welcomepage.partial.css
+++ b/css/index.header-welcomepage.partial.css
@@ -1,6 +1,3 @@
-/* TEST CODE WITHOUT REFACTORING */
-
-
 .navbar-brand {
     max-width: 100px;
     max-height: 100px;
@@ -61,6 +58,8 @@
     .header-card__item-right-arrow {
         color: var(--text-button-color);
         font-weight: bold;
+        position: relative;
+        top: -2px;
     }
 
     .header-card__link-wrapper {
