--- a/css/index.section-about-us.css
+++ b/css/index.section-about-us.css
@@ -1,61 +1,118 @@
-.section-about-us{
-    padding: 90px 0 30px;
-    box-sizing: border-box;
-    display: block;
-    min-width:  320px;
+.section-about-us {
+  padding: 30px 0 0;
+  box-sizing: border-box;
+  display: block;
+  min-width: 320px;
+  background-image: url("../img/img_section_about_us/section_about_us_background.svg");
 }
-.section-about-us__container{
-padding: 0 24px 0;
+
+.section-about-us__container {
+  padding: 0 15px 0;
+  margin: 0 auto;
+  max-width: 1200px;
 }
-.section-about-us__content{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    text-align: left;
+
+.section-about-us__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: left;
+  min-width: 313px;
+  word-break: break-word;
 }
-.section-about-us__title{
-    color: var(--title-color);
-    font-family: Spectral, serif;
-    font-size: 12px;
+
+.section-about-us__content-title {
+  max-width: 615px;
 }
+
+.section-about-us__content-text {
+  max-width: 615px;
+}
+
+.section-about-us__text {
+  display: block;
+  color: var(--text-color);
+  font-family: "Spectral", serif;
+  font-size: 17px;
+  height: 100%;
+  max-width: 615px;
+
+}
+
+.section-about-us__title {
+  color: var(--title-color);
+  font-family: "Spectral", serif;
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 2.4px;
+}
+
 .section-about-us__description {
-    display: block;
-    font-size: 38px;
-    font-family: "Cormorant Infant", serif;
-    color: #2a2824;
+  display: block;
+  font-size: 45px;
+  font-family: "Cormorant Infant", serif;
+  color: #2a2824;
+  width: bold;
 }
-.section-about-us__text{
-    display: block;
-    color: var(--text-color);
-    font-family: Spectral, serif;
-    font-size: 17px;
+
+.section-about-us__info {
+  margin: 45px 0 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
-.section-about-us__fact{
-    color: var(--title-color);
-    font-family: Spectral, serif;
+
+.section-about-us__info {
+  margin: 0 15px 0;
 }
-.section-about-us__fact-label{
-    color: var(--text-color);
-    font-family: "Cormorant Infant", serif;
+
+.section-about-us__fact {
+  color: var(--title-color);
+  font-family: "Cormorant Infant", serif;
+  font-size: 30px;
+  line-height: 36px;
+  font-style: oblique;
 }
-hr{
-    background-color: var(--text-color);
-    width: 30px;
+
+.section-about-us__fact-label {
+  color: var(--text-color);
+  font-family: "Spectral", serif;
 }
-.section-about-us__info{
+
+hr {
+  background-color: var(--text-color);
+  width: 30px;
+}
+
+.section-about-us__video {
+  margin: 45px;
+  position: relative;
+  max-width: 1500px;
+  padding-bottom: 56.25%;
+}
+
+.section-about-us__video-link iframe {
+  position: absolute;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+@media (min-width: 768px) {
+  .section-about-us__info {
+    flex-direction: row;
+  }
+
+  .section-about-us__content {
+    flex-direction: row;
+  }
+
+  .section-about-us__content-title {
+    max-width: 768px;
+  }
+
+  .section-about-us__video-link iframe {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-.section-about-us__fact{
-    font-size: 33px;
-    font-weight: 500;
-}
-@media(min-width:768px){
-    .section-about-us__info{
-        flex-direction: row;
-    }
-    .section-about-us__content{
-        flex-direction: row;
-    }
+  }
 }
