--- a/css/index.section-gourmand-choice.css
+++ b/css/index.section-gourmand-choice.css
@@ -1,57 +1,164 @@
-.section-gourmand-choice{
-    padding: 30px 0 90px;
+.section-gourmand-choice {
+    padding: 30px 0 120px;
+    box-sizing: border-box;
+    min-width: 320px;
 }
-.section-gourmand-choice__container{
-    padding: 0 24px 0;
+
+.section-gourmand-choice__content {
+    display: flex;
 }
-.section-gourmand-choice__title{
+
+.section-gourmand-choice__info {
+    display: flex;
+    flex-direction: column;
+    max-width: 530px;
+}
+
+.section-gourmand-choice__title {
     color: var(--title-color);
-    font-family: Spectral, serif;
+    font-family: "Spectral", serif;
     font-size: 12px;
+    font-weight: 700;
+    letter-spacing: 2.4px;
 }
-.section-gourmand-choice__description{
-    font-size: 38px;
+
+.section-gourmand-choice__description {
+    display: block;
+    font-size: 52px;
     font-family: "Cormorant Infant", serif;
     color: #2a2824;
+    width: bold;
+    padding-top: 10px;
 }
-.section-gourmand-choice__text{
+
+.section-gourmand-choice__text {
     color: var(--text-color);
-    font-family: Spectral, serif;
+    font-family: "Spectral", serif;
     font-size: 19px;
+    padding-top: 10px;
 }
-.section-gourmand-choice__roller-slide{
-    img{
-        width: 80%;
-        height: auto;
+
+.swiper-container {
+    height: 100%;
+    padding-top: 20px;
+}
+
+.swiper-wrapper {
+    height: 100%;
+}
+
+.swiper-slide {
+    height: 100%;
+    width: 150px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.section-gourmand-choice__slide-image {
+    display: block;
+
+    background-image: url(../img/img_section_gourman_choise/grenache-rose-wine.png);
+    background-size: 90% 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.imm {
+    height: 200px;
+    width: 100px;
+}
+
+.section-gourmand-choice__roller-slide-title {
+    display: block;
+    font-size: 15px;
+    text-align: center;
+    padding-top: 10px;
+}
+
+.section-gourmand-choice__roller-slide-description {
+    display: block;
+    text-align: center;
+    padding-top: 5px;
+}
+
+.section-gourmand-choice__button {
+    text-align: center;
+    padding-top: 10px;
+}
+
+.section-gourmand-choice__roller-button {}
+
+.swiper-container {
+    max-height: 400px;
+}
+
+.section-gourmand-choice__slide-image {
+    width: 100%;
+    height: auto;
+
+    img {
+        width: 100%;
+        height: 100%;
     }
+}
+
+.section-gourmand-choice__slide {
+    display: flex;
+    text-align: start;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.section-gourmand-choice__roller {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: normal;
+}
+
+.swiper-button-prev {
+    position: relative;
+}
+
+.swiper-button-next {
+    position: relative;
+}
+
+/*
+
+.section-gourmand-choice__roller-slide-title {
+    font-size: 12px;
+    font-family: "Cormorant Infant", serif;
+    color: #2a2824;
 
 }
-.section-gourmand-choice__roller-slide-title{
-    font-family: "Cormorant Infant", serif;
-    color: #2a2824;
-}
-.section-gourmand-choice__roller-slide-description{
+
+.section-gourmand-choice__roller-slide-description {
     color: var(--title-color);
     font-family: Spectral, serif;
+    font-size: 15px;
 }
-.section-gourmand-choice__arrow{
+
+.section-gourmand-choice__arrow {
     width: 12px;
 }
-.section-gourmand-choice__roller-button{
-    color: white;
-}
-.section-gourmand-choice__button{
-    background-color: var(--title-color);
-    border: 2px;
+
+.section-gourmand-choice__roller-button {
+    background: var(--title-color);
     box-sizing: border-box;
     display: block;
     position: absolute;
     transition: inherit;
-}
-.section-gourmand-choice__roller-slides{
-    text-align: center;
-    img{
-        position:relative;
-    }
+    border: 0;
+    color: white;
 }
 
+.section-gourmand-choice__roller-slides {
+    text-align: center;
+
+    img {
+        position: relative;
+    }
+} */
